[package]
name = "dxgi"
version = "0.1.0"
edition = "2021"

[features]
default = []
# vram = ["hwcodec/vram"]

[dependencies]
windows = { version = "0.56.0", features = [
    "Foundation",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation",
    # "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_SystemServices",
    "Win32_System_StationsAndDesktops",
]}

log = "0.4.17"
parking_lot = "0.12.2"

[dev-dependencies]
env_logger = "0.9.0"
hwcodec = { path = "../../../hwcodec", features=["vram"] }
